2007-02-01 Andreas Obergrusberger <tradiazqyahoo.de>
  * fixed a bad bug in leoslyrics that made every
    second line an empty line
  * uploaded some updates for the lyrics system

2007-01-03 Andreas Obergrusberger <tradiaz@yahoo.de>
  * added plugin support for lyrics
  * changed the build system heavily, look at INSTALL
  * build system now GNU standardized

2006-11-11 Andreas Obergrusberger <tradiaz@yahoo.de>
  * fixed advanced search
  * go root/parent also for artist screen
  
2006-11-8 Andreas Obergrusberger <tradiaz@yahoo.de>
  * Daniel added the functionality to go to
    the parent and root directory via shortcut
  * updated ncmpc.pot

2006-11-5 Andreas Obergrusberger <tradiaz@yahoo.de>
  * spanish translation updated

2006-11-1 Andreas Obergrusberger <tradiaz@yahoo.de>
  * fixed build problems on some systems 
    by adding mkinstalldirs 

2006-10-28 Andreas Obergrusberger <tradiaz@yahoo.de>
  * Daniel has added sorting by caring about LC_COLLATE
  
2006-10-26 Andreas Obergrusberger <tradiaz@yahoo.de>
  * updated the galician translation
    by Johám-Luís Miguéns Vila

2006-10-5 Andreas Obergrusberger <tradiaz@yahoo.de>
	* Daniel sent me patches that will show the parent
	  directory in the browse screen title
	*...and a patch that allows the user to specify
	 shortened album names in for example the playlist screen
	 via %shortalbum% 
	
2006-08-8 Andreas Obergrusberger <tradiaz@yahoo.de> 
	* Here it is! the splash screen. asking you for password 
	  everytime and featuring a nice animation :)
	* ncmpc will now always ask for a password when it's not 
	  permitted to execute a command

2006-08-8 Andreas Obergrusberger <tradiaz@yahoo.de> 
	* Avuton fixed some warning
	* fixed a bug that doubled empty lines
	  when loading lyrics from hd

2006-08-7 Andreas Obergrusberger <tradiaz@yahoo.de>
	* bugfixes in lyrics screen
	* ncmpc can now load and save lyrics
	  loading and saving is compatible with gmpc's ~/.lyrics