@@ -93,6 +93,12 @@ Visible bell on alerts.
 .B crossfade\-time = CROSSFADE TIME
 Default crossfade time in Seconds
 .TP
+.B scroll = yes|no
+Scroll the title if it is too long for the screen.
+.TP
+.B scroll\-sep = STRING
+The separator to show at the end of the scrolling title.
+.TP
 .B seek\-time = NUM
 Seek forward/backward by NUM seconds.
 .TP 
@@ -189,5 +195,5 @@ Report bugs on http://www.musicpd.org/mantis/
 Since MPD uses UTF\-8, ncmpc needs to convert characters to the 
 charset used by the local system. If you get character conversion errors when your running ncmpc you probably need to set up your locale. This is done by setting any of the LC_CTYPE, LANG or LC_ALL enviroment variables (LC_CTYPE only affects character handling).
 
-.SH "SE ALSO"
+.SH "SEE ALSO"
 mpc(1), mpd(1), locale(5), locale(7)
